Modification annotation pour documentation api via swagger
